# android-tracing-and-profiling-training

./: .gitignore  README.md  SOLUTIONS.md  build.gradle.kts  settings.gradle.kts  solutions.md
app/: build.gradle.kts
app/MacroBenchmark/: build.gradle.kts
app/MacroBenchmark/src/main/java/com/inovex/macrobenchmark/: MacroBenchmarkActivityBenchmark.kt
app/MicroBenchmark/: build.gradle.kts
app/MicroBenchmark/src/androidTest/java/com/inovex/microbenchmark/: FibBenchmark.kt  MathBenchmark.kt
app/fiblibrary/src/main/java/com/inovex/fib/: fib.kt
app/src/androidTest/java/com/inovex/training/performance/: ExampleInstrumentedTest.kt  MathBenchmark.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  custom_trace_events_activity.c  java_leak_activity.c  jni_performance_activity.c  native.c  native_leak_activity.c
app/src/main/java/com/inovex/training/performance/: Application.kt  CPULeakActivity.kt  CoroutineTraceActivity.kt  CustomTraceEventsActivity.kt  FrameJankActivity.kt  JNIPerformanceActivity.kt  JavaLeakActivity.kt  MacroBenchmarkActivity.kt  MainActivity.kt  NativeLeakActivity.kt  fib.kt
app/src/main/res/layout/: layout.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/inovex/training/performance/: DispatcherTest.kt  ExampleUnitTest.kt  FibTest.kt  InlineTest.kt  LazyInitializationTest.kt  ListMapTest.kt  (+3 more)
fiblibrary/: build.gradle.kts
fiblibrary/src/main/java/com/inovex/fib/: fib.kt
fiblibrary/src/test/java/com/inovex/fib/: FibTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+9 files in other folders)
